--- a/trunk/ddscanner/app/src/main/res/layout/info_window_divecenter.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/info_window_divecenter.xml
@@ -19,7 +19,6 @@
             android:lines="1"
             android:ellipsize="end"
             android:layout_height="wrap_content"
-            android:text="No Gravity Dive Center"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/black_text"
             android:layout_marginTop="2dp"
@@ -54,9 +53,10 @@
             android:layout_marginLeft="10dp"
             android:visibility="visible"
             android:textSize="12sp"
+            android:lines="1"
+            android:ellipsize="end"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="123123123123"/>
+            android:layout_height="wrap_content" />
     </RelativeLayout>
     <ImageView
         android:layout_below="@+id/top"
