--- a/trunk/ddscanner/app/src/main/res/layout/info_window_divecenter.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/info_window_divecenter.xml
@@ -5,7 +5,7 @@
     <RelativeLayout
         android:id="@+id/top"
         android:background="@drawable/only_top_image_border"
-        android:layout_width="300dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:padding="5dp">
         <ImageView
@@ -55,12 +55,19 @@
             android:textSize="12sp"
             android:lines="1"
             android:ellipsize="end"
-            android:layout_width="wrap_content"
+            android:layout_width="205dp"
             android:layout_height="wrap_content" />
+        <ImageView
+            android:layout_width="20dp"
+            android:layout_marginRight="5dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="35dp"
+            android:layout_toRightOf="@+id/iw_dc_address"
+            android:src="@drawable/ic_arrow_reviews"/>
     </RelativeLayout>
     <ImageView
         android:layout_below="@+id/top"
-        android:layout_width="300dp"
+        android:layout_width="320dp"
         android:layout_height="wrap_content"
         android:src="@drawable/triangle"/>
 </RelativeLayout>
