--- a/trunk/ddscanner/app/src/main/res/layout/dive_center_list_fragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_center_list_fragment.xml
@@ -7,6 +7,7 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:padding="5dp"
         android:id="@+id/dc_rc"
         />
