--- a/trunk/ddscanner/app/src/main/res/layout/dive_center_list_fragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/dive_center_list_fragment.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="#939393"
-            android:text="Sorry! There are no spots here."/>
+            android:text="Sorry! There are no dive centers here."/>
         <Button
             android:id="@+id/btn_back_to_map"
             android:layout_below="@+id/text"
