--- a/trunk/ddscanner/app/src/main/res/layout/activity_pick_ds_location.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_pick_ds_location.xml
@@ -82,6 +82,7 @@
         </LinearLayout>
     </LinearLayout>
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/apply_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_check"
