--- a/trunk/ddscanner/app/src/main/res/values/styles.xml
+++ b/trunk/ddscanner/app/src/main/res/values/styles.xml
@@ -43,7 +43,16 @@
         <item name="android:textColorHint">#B2B2B2</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
-
+    
+    <style name="AddSealifeEditText">
+        <item name="android:layout_height">56dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textColorHint">#b2b2b2</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+    
     <style name="AddDsSpinner" parent="Base.Widget.AppCompat.Spinner">
 
     </style>
