--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_sealife.xml
@@ -14,6 +14,7 @@
         <android.support.v7.widget.CardView
             android:id="@+id/add_photo_layout"
             android:layout_width="match_parent"
+            android:background="?attr/selectableItemBackground"
             android:layout_height="wrap_content">
 
             <RelativeLayout
