Add sealife activity

--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_sealife.xml
@@ -16,13 +16,23 @@
             android:layout_width="match_parent"
             android:background="?attr/selectableItemBackground"
             android:layout_height="wrap_content">
-
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="230dp"
-                android:gravity="center">
+                android:layout_height="230dp">
+                <android.support.v7.widget.AppCompatImageButton
+                    android:visibility="gone"
+                    android:id="@+id/delete_photo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/ic_delete_newsealife"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_margin="10dp" />
 
                 <RelativeLayout
+                    android:id="@+id/add_photo_center_layout"
+                    android:layout_centerInParent="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
