--- a/trunk/ddscanner/app/src/main/res/layout/activity_add_sealife.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_add_sealife.xml
@@ -52,13 +52,15 @@
                 </RelativeLayout>
             </RelativeLayout>
         </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
+        <ScrollView
             android:id="@+id/data"
+            android:layout_below="@+id/add_photo_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="visible"
-            android:layout_below="@+id/add_photo_layout"
             android:layout_marginTop="10dp">
 
             <RelativeLayout
@@ -170,6 +172,7 @@
 
             </RelativeLayout>
         </android.support.v7.widget.CardView>
+        </ScrollView>
         <RelativeLayout
             android:layout_below="@+id/data"
             android:layout_width="match_parent"
