--- a/trunk/ddscanner/app/src/main/res/layout/product_item.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/product_item.xml
@@ -1,68 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
+    android:layout_height="82dp"
     android:background="@color/white"
-    android:layout_marginTop="5dp"
     android:clickable="true"
     android:focusable="true">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?attr/selectableItemBackground">
-    <TextView
-        android:id="@+id/product_title"
-        android:layout_width="wrap_content"
-        android:layout_toLeftOf="@+id/product_logo"
-        android:layout_alignParentLeft="true"
-        android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="5dp"
-        android:textColor="@color/black_text"
-        android:text="Rock back" />
-    <TextView
-        android:id="@+id/product_description"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_toLeftOf="@+id/product_logo"
-        android:layout_alignParentLeft="true"
-        android:textSize="14dp"
-        android:ellipsize="end"
-        android:lines="3"
-        android:layout_marginTop="3dp"
-        android:layout_marginRight="5dp"
-        android:textColor="#616161"
-        android:layout_marginLeft="15dp"
-        android:layout_below="@+id/product_title"
-        android:text="It s a long established fact that a reader will be distracted by the readable content..."/>
 
-    <LinearLayout
-        android:layout_marginLeft="10dp"
-        android:id="@+id/stars"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_below="@+id/product_description"
-        android:gravity="center_vertical|center_horizontal"
-        android:orientation="horizontal">
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/product_logo"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/list_photo_default" />
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginLeft="37dp"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:visibility="visible" />
+        <RelativeLayout
+            android:id="@+id/product_data_layout"
+            android:layout_width="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_height="69dp"
+            android:layout_toRightOf="@+id/product_logo">
 
-    <ImageView
-        android:id="@+id/product_logo"
-        android:layout_width="130dp"
-        android:layout_height="130dp"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/list_photo_default"/>
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleSmall"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_gravity="center"
-        android:layout_alignParentRight="true"
-        android:visibility="visible"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="40dp" />
+            <TextView
+                android:lines="1"
+                android:ellipsize="end"
+                android:id="@+id/product_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Rock back"
+                android:textColor="@color/black_text"
+                android:textSize="18sp" />
+
+            <LinearLayout
+                android:id="@+id/stars"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/product_title"
+                android:gravity="center_vertical|center_horizontal"
+                android:layout_marginTop="3dp"
+                android:orientation="horizontal"></LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/stars"
+                android:textSize="15sp"
+                android:textColor="@color/shuffle_item_text"
+                android:text="Wreck"/>
+        </RelativeLayout>
+        <ImageView
+            android:layout_toRightOf="@+id/product_logo"
+            android:layout_below="@+id/product_data_layout"
+            android:layout_width="match_parent"
+            android:scaleType="center"
+            android:layout_height="wrap_content"
+            android:src="@drawable/divider"/>
     </RelativeLayout>
-    </RelativeLayout>
+</RelativeLayout>
