--- a/trunk/ddscanner/app/src/main/res/layout/product_list_fragment.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/product_list_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
     <android.support.v7.widget.RecyclerView
@@ -35,15 +36,14 @@
             android:textSize="18sp"
             android:textColor="#939393"
             android:text="Sorry! There are no spots here"/>
-        <Button
-            android:id="@+id/btn_back_to_map"
-            android:layout_below="@+id/text"
-            android:text="BACK TO MAP"
-            android:textSize="15sp"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="130dp"
-            android:background="@color/orange"/>
     </RelativeLayout>
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/map_list_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_acb_map"
+        app:backgroundTint="@color/white"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="14dp"/>
+</RelativeLayout>
