--- a/trunk/ddscanner/app/src/main/res/layout/activity_filter.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_filter.xml
@@ -1,127 +1,213 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f6f6f6">
-<include layout="@layout/view_toolbar" />
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#fbfbfb"
+    android:orientation="vertical">
+
+    <include layout="@layout/view_toolbar" />
+    <!--  <ScrollView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
+      <RelativeLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:padding="20dp"
+          android:layout_marginTop="10dp">
+
+      <TextView
+          android:id="@+id/price"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="VISIBILITY"
+          android:textSize="16dp"
+          android:fontFamily="sans-serif-medium"
+          android:textColor="@color/black_text" />
+          <ImageView
+              android:id="@+id/line_title"
+              android:layout_marginTop="5dp"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_below="@+id/price"
+              android:src="@drawable/divider_title"/>
+          <RadioGroup
+              android:layout_marginTop="10dp"
+              android:id="@+id/rg_visibility"
+              android:layout_below="@id/line_title"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
+
+          </RadioGroup>
+          <TextView
+              android:layout_marginTop="10dp"
+              android:id="@+id/currents_title"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_below="@+id/rg_visibility"
+              android:text="CURRENTS"
+              android:textSize="16dp"
+              android:fontFamily="sans-serif-medium"
+              android:textColor="@color/black_text" />
+          <ImageView
+              android:id="@+id/line_title_currents"
+              android:layout_marginTop="5dp"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_below="@+id/currents_title"
+              android:src="@drawable/divider_title"/>
+          <RadioGroup
+              android:layout_marginTop="10dp"
+              android:id="@+id/rg_currents"
+              android:layout_below="@+id/line_title_currents"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
+
+          </RadioGroup>
+          <TextView
+              android:id="@+id/level"
+              android:layout_below="@+id/rg_currents"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="LEVEL"
+              android:textSize="16dp"
+              android:layout_marginTop="5dp"
+              android:fontFamily="sans-serif-medium"
+              android:textColor="@color/black_text" />
+          <ImageView
+              android:id="@+id/line_title_level"
+              android:layout_marginTop="5dp"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_below="@+id/level"
+              android:src="@drawable/divider_title"/>
+          <RadioGroup
+              android:layout_marginTop="10dp"
+              android:id="@+id/rg_level"
+              android:layout_below="@+id/line_title_level"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
+
+          </RadioGroup>
+          <TextView
+              android:id="@+id/object"
+              android:layout_below="@+id/rg_level"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="OBJECT"
+              android:textSize="16dp"
+              android:layout_marginTop="5dp"
+              android:fontFamily="sans-serif-medium"
+              android:textColor="@color/black_text" />
+          <ImageView
+              android:id="@+id/line_title_object"
+              android:layout_marginTop="5dp"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_below="@+id/object"
+              android:src="@drawable/divider_title"/>
+          <RadioGroup
+              android:layout_marginTop="10dp"
+              android:id="@+id/rg_object"
+              android:layout_below="@+id/line_title_object"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content">
+
+          </RadioGroup>
+          <Button
+              android:id="@+id/apply_filter"
+              android:layout_marginLeft="45dp"
+              android:layout_marginTop="20dp"
+              android:background="@color/orange"
+              android:text="APPLY"
+              android:layout_below="@id/rg_object"
+              android:layout_width="120dp"
+              android:layout_height="35dp"
+              />
+      </RelativeLayout>
+
+      </ScrollView> -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:layout_marginTop="10dp">
+        android:layout_height="70dp"
+        android:background="@color/white"
+        android:gravity="center_vertical">
 
-    <TextView
-        android:id="@+id/price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="VISIBILITY"
-        android:textSize="16dp"
-        android:fontFamily="sans-serif-medium"
-        android:textColor="@color/black_text" />
         <ImageView
-            android:id="@+id/line_title"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/price"
-            android:src="@drawable/divider_title"/>
-        <RadioGroup
-            android:layout_marginTop="10dp"
-            android:id="@+id/rg_visibility"
-            android:layout_below="@id/line_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </RadioGroup>
-        <TextView
-            android:layout_marginTop="10dp"
-            android:id="@+id/currents_title"
+            android:id="@+id/toprate_icon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/rg_visibility"
-            android:text="CURRENTS"
-            android:textSize="16dp"
-            android:fontFamily="sans-serif-medium"
-            android:textColor="@color/black_text" />
-        <ImageView
-            android:id="@+id/line_title_currents"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/currents_title"
-            android:src="@drawable/divider_title"/>
-        <RadioGroup
-            android:layout_marginTop="10dp"
-            android:id="@+id/rg_currents"
-            android:layout_below="@+id/line_title_currents"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="18dp"
+            android:src="@drawable/ic_toprate_filter" />
 
-        </RadioGroup>
         <TextView
-            android:id="@+id/level"
-            android:layout_below="@+id/rg_currents"
+            android:id="@+id/toprate_text"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="LEVEL"
-            android:textSize="16dp"
-            android:layout_marginTop="5dp"
-            android:fontFamily="sans-serif-medium"
-            android:textColor="@color/black_text" />
-        <ImageView
-            android:id="@+id/line_title_level"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/level"
-            android:src="@drawable/divider_title"/>
-        <RadioGroup
-            android:layout_marginTop="10dp"
-            android:id="@+id/rg_level"
-            android:layout_below="@+id/line_title_level"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="26dp"
+            android:layout_toRightOf="@+id/toprate_icon"
+            android:gravity="center"
+            android:text="@string/filter_only_best_rated"
+            android:textColor="@color/black_text"
+            android:textSize="16sp" />
 
-        </RadioGroup>
-        <TextView
-            android:id="@+id/object"
-            android:layout_below="@+id/rg_level"
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/only_rated_switch"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="OBJECT"
-            android:textSize="16dp"
-            android:layout_marginTop="5dp"
-            android:fontFamily="sans-serif-medium"
-            android:textColor="@color/black_text" />
-        <ImageView
-            android:id="@+id/line_title_object"
-            android:layout_marginTop="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/object"
-            android:src="@drawable/divider_title"/>
-        <RadioGroup
-            android:layout_marginTop="10dp"
-            android:id="@+id/rg_object"
-            android:layout_below="@+id/line_title_object"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-        </RadioGroup>
-        <Button
-            android:id="@+id/apply_filter"
-            android:layout_marginLeft="45dp"
-            android:layout_marginTop="20dp"
-            android:background="@color/orange"
-            android:text="APPLY"
-            android:layout_below="@id/rg_object"
-            android:layout_width="120dp"
-            android:layout_height="35dp"
-            />
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="18dp"
+            android:layout_toRightOf="@+id/toprate_text"
+            android:checked="true"
+            android:theme="@style/Color1SwitchStyle" />
     </RelativeLayout>
 
-    </ScrollView>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/divider" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
+        android:src="@drawable/divider" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/white">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="20dp"
+            android:paddingTop="22dp"
+            android:text="@string/filters_filters"
+            android:textColor="#a3a3a3"
+            android:textSize="16sp" />
+    </LinearLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/divider"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white">
+        <fr.ganfra.materialspinner.MaterialSpinner
+            android:id="@+id/spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            app:ms_multiline="false"
+            app:ms_hint="hint"
+            app:ms_enableFloatingLabel="false"
+            app:ms_enableErrorLabel="false"
+            app:ms_floatingLabelText="floating label"
+            app:ms_typeface="typeface.ttf"
+            app:ms_thickness="2dp"
+            app:ms_arrowColor="@android:color/transparent"
+            app:ms_arrowSize="16dp"
+            app:ms_alignLabels="false" />
+    </LinearLayout>
 </LinearLayout>
