--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -2,7 +2,8 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:map="http://schemas.android.com/tools">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -76,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:visibility="visible">
+                android:visibility="gone">
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="70dp"
@@ -218,7 +219,7 @@
                     android:paddingLeft="20dp"
                     android:paddingTop="22dp"
                     android:text="@string/photos_title"
-                    android:textColor="#a3a3a3"
+                    android:textColor="@color/black_text"
                     android:textSize="16sp" />
 
 
@@ -453,7 +454,7 @@
                     android:paddingLeft="20dp"
                     android:paddingTop="22dp"
                     android:text="@string/sealifePlace"
-                    android:textColor="#a3a3a3"
+                    android:textColor="@color/black_text"
                     android:textSize="16sp" />
 
 
@@ -563,12 +564,18 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:src="@drawable/divider"/>
+                    <LinearLayout
+                        android:id="@+id/map_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
                     <fragment
                         android:clickable="false"
                         android:id="@+id/google_map_fragment"
                         class="com.google.android.gms.maps.MapFragment"
                         android:layout_width="match_parent"
+                        map:clickable="false"
                         android:layout_height="150dp"/>
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
