--- a/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
+++ b/trunk/ddscanner/app/src/main/res/layout/activity_dive_spot_details.xml
@@ -123,6 +123,7 @@
                     android:src="@drawable/divider" />
 
                 <RelativeLayout
+                    android:id="@+id/check_in_peoples"
                     android:layout_width="match_parent"
                     android:layout_height="58dp"
                     android:background="@color/white">
